# FreeCAD-DFM-Workbench

./: .buildinfo  .gitignore  Enums.py  Init.py  InitGui.py  README.md  analysis_runner.py  app.html  data_types.py  dfm.analyzers.html  dfm.checks.html  dfm.core.html  dfm.html  dfm.registries.html  dfm.utils.html  enums.py  genindex.html  gui.html  gui.results.html  gui.results.tabs.html  index.html  modules.html  objects.inv  package.xml  py-modindex.html  pyrightconfig.json  registry.py  runner.py  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: feature_request.md  issue-template.md
.github/workflows/: docs.yaml
Analyzers/: BaseAnalyzer.py  DraftAnalyzer.py
Documentation/source/: conf.py  index.rst
Resources/Documents/: Overview.md
_modules/: index.html
_modules/app/: analysis_runner.html  history.html
_modules/dfm/: models.html  rules.html
_modules/gui/: process_library.html  process_manager.html  task_results.html  task_show_normals.html  utils.html
_sources/: app.rst.txt  dfm.analyzers.rst.txt  dfm.checks.rst.txt  dfm.registries.rst.txt  dfm.rst.txt  dfm.utils.rst.txt  gui.results.rst.txt  gui.results.tabs.rst.txt  gui.rst.txt  modules.rst.txt
_static/: documentation_options.js
analyzers/: DraftAnalyzer.py  __init__.py  base_analyzer.py  draft_analyzer.py  thickness_analyzer.py
app/: analysis_runner.py  analysis_timer.py  history.py  runner.py
checks/: __init__.py  base_check.py  draft_angle_check.py  min_draft_angle_check.py  thickness_check.py
dfm/: __init__.py  models.py  rules.py
dfm/analyzers/: __init__.py  draft_analyzer.py  ray_thickness_analyzer.py  sharp_corners.py  sphere_thickness_analyzer.py  thickness_analyzer.py  undercut_analyzer.py
dfm/checks/: __init__.py  draft_angle_check.py  sharp_corner_check.py  sharp_external_corner_check.py  sharp_internal_corner_check.py  thickness_check.py  undercut_check.py
dfm/core/: __init__.py  base_analyzer.py  base_check.py
dfm/processes/: metal_injection_molding.yaml  process.py  (+1 more)
gui/: DFM_rc.py  __init__.py  gui_runner.py  preferences.py  process_library.py  process_manager.py  task_results.py  task_results.ui  task_setup.py  task_show_normals.py  utils.py  visuals.py  widgets.py
process/: __init__.py  base_process.py  injection_molding_process.py
tests/: run_tests.py  test_analyzers.py  test_bridge_span_analyzer.py
(+139 files in other folders)
