<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>DFM Workbench</name>
  <description>Design for manufacturing workbench</description>
  <version>0.0.1</version>
  <author email="ryan.FreeCAD@gmail.com">Ryan Kembrey</author>
  <maintainer email="ryan.FreeCAD@gmail.com">Ryan Kembrey</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="master">https://github.com/ryankembrey/FreeCAD-DFM-Workbench</url>
  <url type="documentation">https://ryankembrey.github.io/FreeCAD-DFM-Workbench/</url>

  <content>
    <workbench>
      <name>DFM Workbench</name>
      <classname>DFMWorkbench</classname>
      <description>Design for manufacturing workbench. Evaluate designs against manufacturing processes and associated rules.</description>
      <version>0.0.1</version>
      <subdirectory>./</subdirectory>
      <icon>gui/resources/icons/dfm_analysis.svg</icon>
      <freecadmin>1.1.0</freecadmin>
      <depend></depend>
      <tag>dfm</tag>
    </workbench>
  </content>
</package>
